--- a/music_big_cities/readme
+++ b/music_big_cities/readme
@@ -1,7 +1,7 @@
-## Музыка больших городов
+<h3 align="center"> Музыка больших городов
 Ввводный проект.
 
-## Данные
+<h3 align="center"> Данные
 В наличии были следующие данные о прослушиваниях треков в сервисе Яндекс.Музыка:
 
 название трека;
@@ -10,5 +10,5 @@
 город;
 день прослушивания;
 время прослушивания;
-## Задача
+<h3 align="center"> Задача
 Провести сравнение музыкальных предпочтений у пользователей Яндекс.Музыки, проживающих в Москве и Санкт-Петербурге. Сравнить прослушивания в понедельник, среду и пятницу по городам, а также сравнить жанры, которые слушают пользователи утром в понедельник и вечером в пятницу в Москве и Санкт-Петербурге.
